Version 9   2013-June-14

--Removed wayward Un-Ignore All button from security tape list (thanks Dan
  Alleck).

--Fixed so that backpack purchase/sale cannot be lost by jumping to security
  tapes (Tapes button hidden after purchase/sale made) (thanks Dan Alleck).

--Wire cutters can now disable an electric floor that is off.

--Made backpack quantities unlimited (instead of one item per slot).

--Improved behavior of undo button for tool sales (undone sales are put back
  where they were sold from, vault or backpack, when possible instead of always
  being put back in the vault).

--Added server-side check to enforce maximum number of backpack slots.

--Remaining backpack contents ditched and added to victim house's vault at end
  of robbery, no matter how robbery ends (success, death, or leaving).

--House map on robbery is now encrypted by server using a changing key provided
  by the client, to weakly hide raw house map from protocol stream.  House map
  of robbery targets no longer printed to stdout.

--Disabled all blueprint functionality.

--Now saving security tapes for scouting trips where anything non-trivial
  happens (where robber at least steps beyond mat or is at least carrying
  tools that will be dropped in vault).

--Increased prices of cut-through and bypass tools (but tools that can analyze
  and meddle are still cheap).




Version 8   2013-June-3

--Added button for clearing a user's list of ignored houses (in case user
  ignores one by mistake).

--Added pencil-scratch marking on blueprints for tiles that have been damaged.

--Added server option for running in perma-permadeath mode (hard limit on
  number of lives per player).




Version 7 Live Server Fixes

--Added extra column in admin view showing edit count for a house (to monitor
  how many top houses have not been edited again since being robbed).

--Increased salary for un-broken houses by a factor of 10.




Version 7    2013-May-29
